# darknet-detect

./: README.md
WithCMake/src/: CMakeLists.txt  Darknet_Detector.cpp  Darknet_Detector.h  main.cpp
WithQt/src/: Darknet_Detector_Qt.pro  Darknet_Detector_Qt_zh_CN.ts  MainWindow.h  MainWindow.ui
